switched svg to opacity

--- a/includes/lessons_all.html
+++ b/includes/lessons_all.html
@@ -3,13 +3,9 @@
        <table style="padding: 0px !important; margin: 0px !important;">
         <tr align="left">
             <td width="60px" style="padding: 0px !important; vertical-align:top;">
-                <svg width="60" height="60" xmlns="http://www.w3.org/2000/svg" ng-show="item.show">
+                <svg width="60" height="60" xmlns="http://www.w3.org/2000/svg" ng-style="!item.show && {opacity: .5};">
                     <circle id="0" stroke-width="3" stroke="#2196f3" fill="#8bc34a" r="25" cy="29.9375" cx="30"/>
                     <text x="25" y="37" fill="white" font-size="20">{{readonly.lessons.length - $index}}</text>
-                </svg>
-                <svg width="60" height="60" xmlns="http://www.w3.org/2000/svg" ng-show="!item.show">
-                    <circle id="0" stroke-width="3" stroke="#000000" fill="#b0b3b7" r="25" cy="29.9375" cx="30"/>
-                    <text x="25" y="37" fill="black" font-size="20">{{readonly.lessons.length - $index}}</text>
                 </svg>
             </td>
             <td style="padding-left: 10px; padding-top: 0px !important; padding-bottom: 0px !important; vertical-align:top;">
