--- a/includes/lessons_all.html
+++ b/includes/lessons_all.html
@@ -23,8 +23,14 @@
                     <circle id="0" stroke-width="3" stroke="#2196f3" fill="#8bc34a" r="25" cy="29.9375" cx="30"/>
                     <!-- <text ng-if="(readonly.lessons.length - $index) < 10" x="40%" y="65%" fill="white" font-size="20">{{readonly.lessons.length - $index}}</text>
                     <text ng-if="(readonly.lessons.length - $index) > 9" x="30%" y="65%" fill="white" font-size="20">{{readonly.lessons.length - $index}}</text>-->
-                    <text ng-if="(readonly.lessons[$index].id) < 10" x="40%" y="65%" fill="white" font-size="20">{{readonly.lessons[$index].id}}</text>
-                    <text ng-if="(readonly.lessons[$index].id) > 9" x="30%" y="65%" fill="white" font-size="20">{{readonly.lessons[$index].id}}</text>
+                    <!--<text ng-if="(readonly.lessons[$index].id) < 10" x="40%" y="65%" fill="white" font-size="20">{{readonly.lessons[$index].id}}</text>
+                    <text ng-if="(readonly.lessons[$index].id) > 9" x="30%" y="65%" fill="white" font-size="20">{{readonly.lessons[$index].id}}</text>-->
+
+                    <text ng-if="(rev) && (readonly.lessons.length - $index) < 10" x="40%" y="65%" fill="white" font-size="20">{{readonly.lessons.length - $index}}</text>
+                    <text ng-if="(rev) && (readonly.lessons.length - $index) > 9" x="30%" y="65%" fill="white" font-size="20">{{readonly.lessons.length - $index}}</text>
+
+                    <text ng-if="(rev == false) && (1 + $index) > 9" x="30%" y="65%" fill="white" font-size="20">{{1 + $index}}</text>
+                    <text ng-if="(rev == false) && (1 + $index) < 10" x="40%" y="65%" fill="white" font-size="20">{{1 + $index}}</text>
                 </svg>
             </td>
             <td style="padding-left: 10px; padding-top: 0px !important; padding-bottom: 0px !important; vertical-align:top;">
