--- a/includes/admin_lessons.html
+++ b/includes/admin_lessons.html
@@ -9,13 +9,19 @@
       </a>
 	</td>
 	<td class="right">
-		<a ng-click="addlesson(item.name)" class="waves-effect waves-light btn light-green">Add</a>
-		
+		<a ng-click="addlesson(0)" class="waves-effect waves-light btn light-green">Add Top</a>
+	</td>
+	<td class="right">
+		<a ng-click="addlesson(1)" class="waves-effect waves-light btn light-green">Add</a>
+	</td>
+	<td class="right">
+		<!--<label for="unit">Unit</label>-->
+		<select id="name" class="browser-default" ng-model="dummy" ng-options="lesson as lesson.unit + '-' + lesson.name for lesson in readonly.lessons"><option value="">SELECT</option></select>
 	</td>
 </tr>
 </table>
 
-<div ng-repeat="item in readonly.lessons">
+<div ng-repeat="item in readonly.lessons" ng-show="item.unit==dummy.unit">
 	<ul class="collection with-header">
 		<li class="collection-item">
 			<div class="row">
@@ -58,6 +64,10 @@
 				 				<div class="input-field col s12">
 									<input id="desc" type="text" maxlength="140" ng-model="item.desc">
 				    				<label class='md-no-float' for="name" data-error="wrong" data-success="right">Description (140 chars)</label>
+								</div>
+				 				<div class="input-field col s12">
+									<input id="unit" type="text" maxlength="10" ng-model="item.unit">
+				    				<label class='md-no-float' for="unit" data-error="wrong" data-success="right">Unit (10 chars)</label>
 								</div>
 							 	<div class="input-field col s12">
 									<input id="img" type="text" ng-model="item.img">
