add unit name to list items

--- a/includes/lessons_all.html
+++ b/includes/lessons_all.html
@@ -34,7 +34,7 @@
                 </svg>
             </td>
             <td style="padding-left: 10px; padding-top: 0px !important; padding-bottom: 0px !important; vertical-align:top;">
-                 <p ng-style="!item.show && {opacity: .5};"><b>{{item.name}}</b><br>
+                 <p ng-style="!item.show && {opacity: .5};"><b>{{item.unit + '-' + item.name}}</b><br>
                 <font size="2"><i>{{item.desc}}</i></font></p>
             </td>
         </tr>
