--- a/includes/admin_list.html
+++ b/includes/admin_list.html
@@ -13,8 +13,15 @@
 			<a ng-click="sortUser(listArray,'pointstotal')" class="waves-effect waves-light btn blue">Points</a>
 		</td>
 	</tr>
+	<tr>
+		<td class="left">
+		<select id="secnum2" class="browser-default" ng-model="dummy2" ng-options="user2 as user2.section for user2 in listArray | unique:'section'">
+			<option value="">SECTION</option>
+		</select>
+		</td>
+	</tr>
 </table>
-<div ng-repeat="(key, item) in listArray">
+<div ng-repeat="(key, item) in listArray" ng-show="item.section == dummy2.section">
 	<ul class="collection with-header">
 	<li class="collection-item avatar">
       <img ng-src='{{item.photoUrl}}' alt="{{item.name}}" height='50px' class="circle">
