--- a/includes/admin_badges.html
+++ b/includes/admin_badges.html
@@ -8,7 +8,11 @@
         	</svg>
       		</a>
 	</td>
-	<td><a ng-click="addbadge()" class="waves-effect waves-light btn right light-green">Add</a></td>
+	<td class="right">
+		<a href="#modalupload" id="upload" title="Upload data" data-height="50" class="modal-action modal-trigger btn blue white-text" style="vertical-align: bottom;">Upload</a><span></span>
+		<a ng-click="addbadge()" class="waves-effect waves-light btn light-green">Add</a>
+	</td>
+	</td>
 </tr>
 </table>
 
