--- a/includes/admin_daily.html
+++ b/includes/admin_daily.html
@@ -26,6 +26,14 @@
 				    	<a class="waves-effect waves-light btn pink" ng-click="removedaily($index)">Delete</a>
 				 </div>
 				 <div ng-show="$scope.showedit">
+					 
+					 
+				   <div style="padding-top: 10px; padding-bottom: 10px;">
+				     <select id="secnum" class="browser-default" ng-model="dummy" ng-options="user as user.section for user in users | unique: 'section'">
+				     <option value="">SECTION</option>
+				   </select>
+					   
+					</div>
 				 	<table class="table">
 				 		<thead>
           					<tr>
@@ -36,7 +44,7 @@
           					</tr>
         				</thead>
 
-        				<tbody ng-repeat="user in users">
+        				<tbody ng-repeat="user in users" ng-show="user.section==dummy.section">
 				 			<tr>
 				 				<td>{{user.email}}</td>
 				 				<td>
