--- a/includes/admin_list.html
+++ b/includes/admin_list.html
@@ -25,7 +25,7 @@
 	<ul class="collection with-header">
 	<li class="collection-item avatar">
       <img ng-src='{{item.photoUrl}}' alt="{{item.name}}" height='50px' class="circle">
-      <span class="title">{{item.name}} ({{item.email}})</span>
+      <span class="title"><a href="" ng-click="navUser2($index)">{{item.name}}</a> ({{item.email}})</span>
       <p>Level: {{item.level.name}}</p>
       <p ng-show="item.confirmed==true"><b>Points: {{item.pointstotal}}</b> | Daily: {{item.dailytotal}} | Quizzes: {{item.quiztotal}} | Badges: {{item.badgestotal}}</p>
       <p ng-show="item.confirmed==false" class="red-text">Unconfirmed new user</p>
