added students button
fewer clicks to return to user list

--- a/includes/nav_ad_stud.html
+++ b/includes/nav_ad_stud.html
@@ -5,7 +5,8 @@
   }
 </style>
 
-<a id="student" title="Return to view" class="btn blue white-text" ng-click="nav('includes/student_view.html')" style="vertical-align: bottom;">My view</a> 
+<a id="student" title="Return to view" class="btn blue white-text" ng-click="nav('includes/student_view.html')" style="vertical-align: bottom;">Student view</a> 
+<a id="student" title="Return to view" class="btn blue white-text" ng-click="navList('includes/admin_list.html')" style="vertical-align: bottom;">Students</a> 
 <a href="#modalprofile" id="profile" title="Profile" data-height="50" class="modal-action modal-trigger right"><img src="{{photoUrl}}" style="height: 40px;border-radius:50%"></a>
 
 <div class="fixed-action-btn vertical top click-to-toggle">
