added support for remembering section pulldown

--- a/includes/admin_quiz.html
+++ b/includes/admin_quiz.html
@@ -26,9 +26,12 @@
 				 <div ng-show="$scope.showedit">
 					 
 					<div style="padding-top: 10px; padding-bottom: 10px;">
- 						<select id="secnum" class="browser-default" ng-model="dummy" ng-options="user as user.section for user in users | unique: 'section'">
+ 						<!--<select id="secnum" class="browser-default" ng-model="dummy" ng-options="user as user.section for user in users | unique: 'section'">
  							<option value="">SECTION</option>
- 						</select>
+ 						</select>-->
+					<select class="browser-default" ng-model="dummy" ng-change="setDummy(dummy)">
+        					<option ng-repeat="section in mysections" value="{{section}}" >{{section}}</option>
+      					</select>
  					</div>
 					 
 				 	<table class="table">
@@ -40,7 +43,7 @@
           					</tr>
         				</thead>
 
-        				<tbody ng-repeat="user in users" ng-show="user.section==dummy.section">
+        				<tbody ng-repeat="user in users" ng-show="user.section==dummy">
 				 			<tr>
 				 				<td>{{user.email}}</td>
 				 				<td><input class="TextBox" type="number" validate="number" min=0 max=100 ng-model="user.quizzes[$parent.$index].grade" ng-change="user.quizzes[$parent.$index].name = $parent.item.name; user.quizzes[$parent.$index].xp = setQuiz(user.quizzes[$parent.$index].grade,$parent.$index)"/><td>
