added support for remembering section pulldown

--- a/includes/admin_list.html
+++ b/includes/admin_list.html
@@ -10,18 +10,23 @@
 		</td>
 		<td class="right">
 			<a ng-click="sortUser(listArray,'email')" class="waves-effect waves-light btn blue">Name</a>
+			<a ng-click="sortUser(listArray,'badgestotal')" class="waves-effect waves-light btn blue">Badges</a>
+			<a ng-click="sortUser(listArray,'quiztotal')" class="waves-effect waves-light btn blue">Quizzes</a>
 			<a ng-click="sortUser(listArray,'pointstotal')" class="waves-effect waves-light btn blue">Points</a>
 		</td>
 	</tr>
 	<tr>
 		<td class="left">
-		<select id="secnum2" class="browser-default" ng-model="dummy2" ng-options="user2 as user2.section for user2 in listArray | unique:'section'">
+		<!--<select id="secnum2" class="browser-default" ng-model="dummy2" ng-options="user2 as user2.section for user2 in listArray | unique:'section'">
 			<option value="">SECTION</option>
-		</select>
+		</select>-->
+		<select class="browser-default" ng-model="dummy" ng-change="setDummy(dummy)">
+        	   <option ng-repeat="section in mysections" value="{{section}}" >{{section}}</option>
+      	        </select>
 		</td>
 	</tr>
 </table>
-<div ng-repeat="(key, item) in listArray" ng-show="item.section == dummy2.section">
+<div ng-repeat="(key, item) in listArray" ng-show="item.section == dummy">
 	<ul class="collection with-header">
 	<li class="collection-item avatar">
       <img ng-src='{{item.photoUrl}}' alt="{{item.name}}" height='50px' class="circle">
