--- a/includes/student_daily.html
+++ b/includes/student_daily.html
@@ -1,15 +1,23 @@
-<div class="row">
+<div class="row" ng-init="drawGraph()">
   <div class="col s12">
     <div class="card">
       <div class="card-content">
         <span class="card-title">Daily comments</span>
+          
+          <a ng-show="checkWindow()" ng-click="$scope.showedit = !$scope.showedit;" id="graph" title="Show graph" data-height="50" class="btn blue white-text">Graph</a><br> 
+          
+          <canvas id="mycanvas" ng-show="$scope.showedit"></canvas>
+          
           <ul class="collection with-header">
             <li class="collection-item avatar" ng-repeat="daily in readonly.daily" ng-show="user.daily[$index] != undefined">
               <img ng-src="images/badges/{{user.daily[$index].badge}}.svg" class="circle"/>
               <p class="title">{{daily.id.name}}</p>
               <p>{{user.daily[$index].desc}}</p>
               <div href="#!" class="secondary-content">
-                <p class="chip blue white-text">{{user.daily[$index].grade}}</p>
+                <p ng-show="user.daily[$index].grade == 4" class="chip orange white-text">{{user.daily[$index].grade}}</p>
+                <p ng-show="user.daily[$index].grade == 3" class="chip blue white-text">{{user.daily[$index].grade}}</p>
+                  <p ng-show="user.daily[$index].grade == 2" class="chip pink lighten-2 white-text">{{user.daily[$index].grade}}</p>
+                  <p ng-show="user.daily[$index].grade < 2" class="chip red white-text">{{user.daily[$index].grade}}</p>
               </div>              
             </li>
           </ul>
