--- a/includes/admin_courses.html
+++ b/includes/admin_courses.html
@@ -32,7 +32,17 @@
             </div>
             <div>
                	<a class="waves-effect waves-light btn light-green" ng-click="navAdmin(item.name)">Edit</a>
-                <a class="waves-effect waves-light btn pink" ng-click="removecourse($index)">Remove</a>
+                <a class="waves-effect waves-light btn pink" ng-init="$scope.showedit = true" ng-disabled="$scope.showedit" ng-click="removecourse($index)">Remove</a>
+                <div style='float: right; vertical-align: bottom;'>
+                    <input type="checkbox" class="checkbox" id="removeme{{$index}}" ng-click="$scope.showedit = !$scope.showedit"/>
+				            <label for="removeme{{$index}}">Enable remove</label>
+                    <a href="" ng-click="helpToast('Select to enable remove button.<br>Removing will de-register, not delete course.',5000,'black')">
+                        <svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                          <ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
+                          <text font-style="normal" transform="matrix(2.25929, 0, 0, 0.870395, -7.11379, -0.393831)" xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="16" id="svg_2" y="20" x="6.5" stroke-width="0" stroke="#2196f3" fill="#2196f3">i</text>
+                        </svg>
+                    </a>
+                </div>
             </div>
           </div>
       </form>
