switched back to old way

--- a/includes/admin_list.html
+++ b/includes/admin_list.html
@@ -17,12 +17,11 @@
 	</tr>
 	<tr>
 		<td class="left">
-		<!--<select id="secnum2" class="browser-default" ng-model="dummy2" ng-options="user2 as user2.section for user2 in listArray | unique:'section'">
-			<option value="">SECTION</option>
-		</select>-->
-		<select class="browser-default" ng-model="dummy" ng-change="setDummy(dummy)">
+		<select id="secnum2" class="browser-default" ng-model="dummy2" ng-options="user2 as user2.section for user2 in listArray | unique:'section'">
+		</select>
+		<!--<select class="browser-default" ng-model="dummy" ng-change="setDummy(dummy)">
         	   <option ng-repeat="section in mysections" value="{{section}}" >{{section}}</option>
-      	        </select>
+      	        </select>-->
 		</td>
 	</tr>
 </table>
