--- a/includes/nav_student.html
+++ b/includes/nav_student.html
@@ -1,7 +1,9 @@
 <style>
   a .svg-share:hover {
     stroke: #000;
+    stroke-width: 3;
     fill: #000;
+    cursor: pointer;
   }
 </style>
 
@@ -39,6 +41,13 @@
       c-1.746,4.924-6.109,15.292-9.516,22.983c-0.387,0.877-0.387,1.854-0.018,2.756l4.942,11.76c0.372,0.891,1.102,1.585,2.022,1.918
       c9.427,3.343,19.022,7.015,23.345,8.947l1.385,0.623v17.608l-1.317,0.644c-4.86,2.323-15.561,6.642-23.445,9.695
       C170.819,120.697,170.092,121.402,169.741,122.25z"/>
+</svg>
+</a>
+
+<a ng-click="navListStudent('includes/student_top5.html')" id="top5" title="Top 5" style="padding-left: 2px !important; vertical-align: bottom;">
+<svg class="svg-share" width="33" height="33.2" xmlns="http://www.w3.org/2000/svg">
+  <path id="svg_1" d="m26.838713,4.889329c-2.80932,2.006308 -6.692326,2.025783 -9.522984,0.059816c-2.72248,1.891508 -6.419942,1.945653 -9.198228,0.162367l-4.995732,4.740296c3.073075,2.968692 3.055214,7.73839 -0.052514,10.686728c-0.412452,1.00662 -0.628621,0.958079 -0.673617,1.971788c-0.10582,2.440587 0.513872,4.717342 2.454945,6.432075c1.73395,1.531736 4.086993,2.181376 6.347276,1.949585c3.774395,0.185033 5.583867,1.73607 6.343129,2.663758c1.025241,-0.991226 2.619584,-2.584735 7.465269,-2.783384c2.89267,-0.396158 3.938018,-1.036151 5.295611,-2.219383c1.827283,-1.614184 2.466218,-3.658222 2.412367,-5.929345c-0.022362,-0.942859 -0.14396,-1.270659 -0.744362,-2.474526c-3.12214,-2.962008 -3.124411,-7.762638 -0.008288,-10.728229l-5.122872,-4.531545z" stroke-width="1.5" fill="#e91e63"/>
+  <text xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="20" id="svg_2" y="27" x="11.5" fill-opacity="null" stroke-opacity="null" stroke-width="0" stroke="#ffffff" fill="#ffffff">5</text>
 </svg>
 </a>
 
