--- a/includes/student_level.html
+++ b/includes/student_level.html
@@ -8,7 +8,8 @@
 <div class="col s12 m6">
   <div class="card">
     <div class="card-image">
-      <img ng-src="{{user.photoUrl}}">
+      <img ng-show="user.photoUrl.indexOf('/mo/') <0" ng-src='{{user.photoUrl}}' alt="{{user.name}}">
+      <img ng-show="user.photoUrl.indexOf('/mo/') >0" ng-src='images/tyler-durden.jpg' alt="{{user.name}}">
     </div>
   </div>
 </div>
