--- a/includes/nav_signin.html
+++ b/includes/nav_signin.html
@@ -1,1 +1,1 @@
-<a ng-click="signin()" class="btn blue white-text right">Sign in</a>
+<div class="row"><a ng-click="signin()" class="btn blue white-text right" style="margin-right: 10px;">Sign in</a></div>
