updates to enable settings modal

--- a/includes/nav_admin.html
+++ b/includes/nav_admin.html
@@ -22,8 +22,8 @@
 </svg>
 </a>
 
-<a ng-click="nav('includes/admin_settings.html')" id="settings" title="Settings" style="padding-left: 5px !important;" class="right">
-<svg class="svg-share" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+<a href="#modalsettings" id="settings" title="Settings" style="padding-left: 5px !important;" class="modal-action modal-trigger right">
+	<svg class="svg-share" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
    viewBox="0 0 203.318 203.318" width="30" height="30" xml:space="preserve">
     <path style="fill:#999999; stroke-width:3"  d="M101.661,67.429c-19.261,0-34.937,15.353-34.937,34.232s15.672,34.25,34.937,34.25
       c19.258,0,34.926-15.371,34.926-34.25C136.587,82.779,120.919,67.429,101.661,67.429z M101.661,129.035
