--- a/includes/nav_student.html
+++ b/includes/nav_student.html
@@ -10,7 +10,7 @@
 <a id="student" title="Return to view" class="btn blue white-text" ng-click="nav('includes/student_view.html')" style="vertical-align: bottom;">My view</a> 
 <a id="lessons" title="View lessons" class="btn light-green white-text" ng-click="nav('includes/lessons_all.html')" style="vertical-align: bottom;">Lessons</a> 
 
-<!--<a ng-click="nav('includes/student_settings.html')" id="settings" title="Settings" style="padding-left: 5px !important; vertical-align: bottom;">-->
+<!--<a ng-click="nav('includes/student_settings.html')" id="settings" title="Settings" style="padding-left: 5px !important; vertical-align: bottom;">
 <svg class="svg-share" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
    viewBox="0 0 203.318 203.318" width="30" height="30" xml:space="preserve">
     <path style="fill:#999999; stroke-width:3"  d="M101.661,67.429c-19.261,0-34.937,15.353-34.937,34.232s15.672,34.25,34.937,34.25
@@ -42,7 +42,7 @@
       c9.427,3.343,19.022,7.015,23.345,8.947l1.385,0.623v17.608l-1.317,0.644c-4.86,2.323-15.561,6.642-23.445,9.695
       C170.819,120.697,170.092,121.402,169.741,122.25z"/>
 </svg>
-</a>
+</a>-->
 
 <a ng-click="navListStudent('includes/student_top5.html')" id="top5" title="Top 5" style="padding-left: 2px !important; vertical-align: bottom;">
 <svg class="svg-share" width="33" height="33.2" xmlns="http://www.w3.org/2000/svg">
